# image_processor

./: CMakeLists.txt  image_processor.cpp  readme.md
include/: args_data.h  bitmap.h  bmp.h  exception.h  filter.h  filter_controller.h  input.h  output.h
include/filters/: crop.h  edge_detection.h  gaussian_blur.h  gray_scale.h  matrix_apply.h  negative.h  pointilize.h  sharpening.h
src/: args_data.cpp  bitmap.cpp  bmp.cpp  exception.cpp  filter_controller.cpp  input.cpp  output.cpp
src/filters/: crop.cpp  edge_detection.cpp  gaussian_blur.cpp  gray_scale.cpp  matrix_apply.cpp  negative.cpp  pointilize.cpp  sharpening.cpp
